# fraud_detection_gnn

./: .gitignore  README.md
dn_dev/: pyproject.toml
dn_dev/anomaly_detection/: IF_toy.ipynb
dn_dev/graphs/: load_data_neo4j.ipynb
ds_dev/: fraud_detection_sol.ipynb
