[tool.poetry]
name = "graphs"
version = "0.1.0"
description = "PyG graphs"
authors = ["DN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch-geometric = "^2.3"
neo4j = "^5.19.0"
networkx = "^3.3"
jupyter = "^1.0.0"
torch = {version = "^2.2.2+cpu", source = "pytorch_cpu"}
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
